# rust-trading-cli

./: README.md
tradingcli/: Cargo.toml
tradingcli/src/: main.rs  position_list.rs  web_utils.rs
