[package]
name = "tradingcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.24", features = ["json"] }
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["macros"] }
